defaultValue was changed to placeholder

--- a/test.html
+++ b/test.html
@@ -15,7 +15,10 @@
 
 	<body>
 		<input-pincode></input-pincode>
+		<input-pincode length="7"> </input-pincode>
+		<input-pincode hasError="true"> </input-pincode>
 		<input-pincode disabled></input-pincode>
+		<input-pincode placeholder="0"></input-pincode>
 		<input-pincode only-numbers="false"></input-pincode>
 	</body>
 	<script>
