--- a/test.html
+++ b/test.html
@@ -7,7 +7,10 @@
 		<script type="module" src="./src/index.tsx"></script>
 	</head>
 	<body>
-		<input-pincode></input-pincode>
+		<div style="width: 600px">
+			<input-pincode></input-pincode>
+		</div>
+
 		-
 		<input-pincode length="7"> </input-pincode>
 		-
