--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta slot="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Input pincode Component</title>
-		<script type="module" src="./src/index.tsx"></script>
+		<script type="module" src="https://unpkg.com/input-pincode@1.0.5/dist/index.mjs"></script>
 	</head>
 	<body>
 		<div style="width: 600px">
